--- a/scss/abovefold/_inner.scss
+++ b/scss/abovefold/_inner.scss
@@ -70,7 +70,24 @@
 			}
 		}
 
-		
+		picture {
+
+			img {
+				width: 100%;
+				height: auto;
+				display: block;
+
+				@include breakpoint(tablet2) {
+					width: 100%;
+					height: auto;
+					position: absolute;
+					right: 0;
+					bottom: 0;
+					display: block;
+					visibility: visible;
+				}
+			}
+		}
 	}
 
 	.table-wrap {
