--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -2,7 +2,7 @@
 @charset 'utf-8';
 /** font face **/
 
-/*@font-face {
+@font-face {
     font-family: 'roboto';
     src: url('../fonts/Roboto-Light-webfont.eot');
     src: url('../fonts/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
@@ -46,7 +46,19 @@
     font-weight: 500;
     font-style: normal;
 
-}*/
+}
+
+@font-face {
+   font-family: 'roboto';
+   src: url('../fonts/Roboto-Thin-webfont.eot');
+   src: url('../fonts/Roboto-Thin-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Roboto-Thin-webfont.woff') format('woff'),
+        url('../fonts/Roboto-Thin-webfont.ttf') format('truetype'),
+        url('../fonts/Roboto-Thin-webfont.svg#robotothin') format('svg');
+   font-weight: 100;
+   font-style: normal;
+
+}
 
 @font-face {
     font-family: 'montserrat';
@@ -65,7 +77,7 @@
 
 }
 
-@font-face {
+/*@font-face {
     font-family: 'montserrat';
     src: url('../fonts/montserrat-extrabold-webfont.woff2') format('woff2'),
          url('../fonts/montserrat-extrabold-webfont.woff') format('woff');
@@ -74,9 +86,6 @@
 
 }
 
-
-
-
 @font-face {
     font-family: 'montserrat';
     src: url('../fonts/montserrat-regular-webfont.woff2') format('woff2'),
@@ -84,6 +93,6 @@
     font-weight: 400;
     font-style: normal;
 
-}
+}*/
 
 /** font face **/
