--- a/scss/abovefold/_home.scss
+++ b/scss/abovefold/_home.scss
@@ -330,3 +330,40 @@
     	max-height: 100%;
     }
 }
+
+
+.popup-wrap {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1011;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.4s ease;
+
+    .close-video {
+    	position: absolute;
+    	top: 0;
+    	right: 0;
+    	z-index: 1001;
+    }
+}
+
+.popup-wrap.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup-content {
+    position: relative;
+    width: 90%;
+    height: 0;
+    top: 50%;
+    margin: 0 auto;
+    transform: translate(0, -50%);
+    padding-bottom: 40%;
+    background: #000;
+}
