--- a/css/new-style.css
+++ b/css/new-style.css
@@ -4,6 +4,33 @@
 	margin: 0px -15px;
 }
 
+.promo-listings-omc p {
+	padding: 6px 25px;
+	font-size: 18px;
+}
+
+.home-omc .partners-img-wrap {
+	border: none;
+}
+
+.home-omc .pl-omc p {
+	font-size: 18px;
+	padding: 6px 25px;
+}
+
 .promo-listings-omc .owl-dots .owl-dot {
 	margin: 20px 5px 0;
+}
+
+.home-latest {
+	padding-bottom: 35px;
+}
+
+
+@media (max-width: 992px) {
+
+	.promo-listings-omc p { 
+		padding: 6px 5px;
+		font-size: 14px;
+	}
 }
