--- a/css/new-style.css
+++ b/css/new-style.css
@@ -9,8 +9,13 @@
 	font-size: 18px;
 }
 
+.home-omc .layout-1 h3 {
+	font-size: 34px;
+}
+
 .home-omc .partners-img-wrap {
 	border: none;
+	text-align: center;
 }
 
 .home-omc .pl-omc p {
@@ -26,11 +31,34 @@
 	padding-bottom: 35px;
 }
 
+.h-omc-featured {
+	margin-top: 60px;
+}
+
 
 @media (max-width: 992px) {
 
 	.promo-listings-omc p { 
 		padding: 6px 5px;
 		font-size: 14px;
+	}
+}
+
+
+@media (max-width: 767px) {
+	.home-omc .layout-1 h3 {
+		font-size: 27px;
+	}
+
+	.home-wrap-section #section-0 .col-sm-6 {
+		text-align: left;
+	}
+
+	.home-wrap-section #section-1.home-feature .col-sm-6 {
+		text-align: center;
+	}
+
+	.home-wrap-section #section-1.home-feature .sec-title {
+		text-align: center;
 	}
 }
