--- a/scss/abovefold/_inner.scss
+++ b/scss/abovefold/_inner.scss
@@ -660,11 +660,11 @@
 	    	float: none;
 	    	width: 1px;
 	    	height: 55px;
-	    	top: 0;
+	    	top: 50%;
 	    	position: absolute;
 	    	background: #ccc;
 	    	left: 0;
-	    	margin-top: -6px;
+	    	margin-top: -27px;
 
 	    }
 
