--- a/css/style.css
+++ b/css/style.css
@@ -8766,11 +8766,11 @@ body:lang(km) .sec-menu ul li > a {
       float: none;
       width: 1px;
       height: 55px;
-      top: 0;
+      top: 50%;
       position: absolute;
       background: #ccc;
       left: 0;
-      margin-top: -6px; }
+      margin-top: -27px; }
     @media (max-width: 640px) {
       .card-list .card-item-discount {
         right: 5px; } }
@@ -9337,6 +9337,12 @@ body:lang(km) .sec-menu ul li > a {
   .filter-bg .row {
     margin: 0; } }
 
+.filter-bg .wd-30 {
+  width: 30%; }
+  @media (max-width: 767px) {
+    .filter-bg .wd-30 {
+      width: 100%; } }
+
 .filter-bg .wd-20 {
   width: 20%; }
   @media (max-width: 767px) {
@@ -9355,6 +9361,10 @@ body:lang(km) .sec-menu ul li > a {
     .filter-bg .wd-10 {
       width: 100%; } }
 
+.filter-bg ul li a {
+  display: table-row !important;
+  pointer-events: none; }
+
 .filter-bg ul.wd-ul {
   padding-top: 0;
   margin-bottom: 20px; }
@@ -9363,13 +9373,19 @@ body:lang(km) .sec-menu ul li > a {
     margin: 0;
     border: 0;
     background-color: #eef3bf;
-    min-height: auto; }
+    min-height: auto;
+    display: table;
+    width: 100%; }
     .filter-bg ul.wd-ul li:nth-child(2n) {
       background-color: #fff; }
     .filter-bg ul.wd-ul li:hover {
       background-color: #fde4be; }
-    .filter-bg ul.wd-ul li .wd-20, .filter-bg ul.wd-ul li .wd-15, .filter-bg ul.wd-ul li .wd-10 {
-      float: left; }
+    .filter-bg ul.wd-ul li .wd-30, .filter-bg ul.wd-ul li .wd-20, .filter-bg ul.wd-ul li .wd-15, .filter-bg ul.wd-ul li .wd-10 {
+      display: table-cell;
+      vertical-align: middle; }
+      @media (max-width: 767px) {
+        .filter-bg ul.wd-ul li .wd-30, .filter-bg ul.wd-ul li .wd-20, .filter-bg ul.wd-ul li .wd-15, .filter-bg ul.wd-ul li .wd-10 {
+          display: block; } }
     .filter-bg ul.wd-ul li p {
       padding: 0 10px;
       font-size: 13px; }
@@ -9415,6 +9431,64 @@ body:lang(km) .sec-menu ul li > a {
         min-width: 188px;
         max-width: 188px; } }
 
+.biller-bg ul.wd-ul li {
+  background: #fff;
+  border: 1px solid #82d9ff;
+  border-radius: 4px;
+  margin-bottom: 5px; }
+  @media (max-width: 767px) {
+    .biller-bg ul.wd-ul li {
+      margin-bottom: 10px; } }
+  .biller-bg ul.wd-ul li .wd-20 p {
+    font-weight: 300; }
+  .biller-bg ul.wd-ul li p.null-left {
+    padding-left: 0; }
+    @media (max-width: 767px) {
+      .biller-bg ul.wd-ul li p.null-left {
+        padding-left: 120px;
+        position: relative; } }
+  @media (max-width: 767px) {
+    .biller-bg ul.wd-ul li p {
+      padding-left: 120px;
+      position: relative; } }
+  .biller-bg ul.wd-ul li:hover {
+    background: #fff; }
+  .biller-bg ul.wd-ul li .biller-label {
+    min-width: 100px;
+    font-weight: 300;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    display: none; }
+    @media (max-width: 767px) {
+      .biller-bg ul.wd-ul li .biller-label {
+        display: block; } }
+
+.biller-list-img {
+  padding-bottom: 33%;
+  max-width: 120px;
+  width: 100%;
+  height: auto;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 10px; }
+  @media (max-width: 767px) {
+    .biller-list-img {
+      padding-bottom: 18%;
+      margin-bottom: 10px; } }
+  .biller-list-img img {
+    padding: 0px 10px;
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto; }
+
 .filter-hd {
   display: -webkit-box;
   display: -webkit-flex;
@@ -9424,7 +9498,7 @@ body:lang(km) .sec-menu ul li > a {
   @media (max-width: 767px) {
     .filter-hd {
       display: none; } }
-  .filter-hd .title, .filter-hd .discount, .filter-hd .contact, .filter-hd .wd-20, .filter-hd .wd-15, .filter-hd .wd-10 {
+  .filter-hd .title, .filter-hd .discount, .filter-hd .contact, .filter-hd .wd-30, .filter-hd .wd-20, .filter-hd .wd-15, .filter-hd .wd-10 {
     background-color: #00adef;
     color: #ffffff;
     padding: 10px;
