--- a/scss/pages/_inner.scss
+++ b/scss/pages/_inner.scss
@@ -194,6 +194,12 @@
 		}
 	}
 
+	.wd-30 { width: 30%;
+		@include breakpoint(tablet2) {
+			width: 100%;
+		}
+	}
+
 	.wd-20 { width: 20%;
 		@include breakpoint(tablet2) {
 			width: 100%;
@@ -208,8 +214,12 @@
 		@include breakpoint(tablet2) {
 			width: 100%;
 		}
-	 }
+	}
 
+	ul li a {
+		display: table-row !important;
+		pointer-events: none;
+	}
 
 
   ul.wd-ul {
@@ -221,6 +231,9 @@
 			margin: 0;
 			border: 0;
 			background-color: lighten($coGreen, 40%);
+			min-height: auto;
+			display: table;
+			width: 100%;
 
 			&:nth-child(2n) {
 				background-color: #fff;
@@ -230,9 +243,15 @@
 				background-color: lighten($coOrange, 33%);
 
 			}
-			min-height: auto;
+			
+			.wd-30, .wd-20, .wd-15, .wd-10 { 
+				display: table-cell;
+				vertical-align: middle;
 
-			.wd-20,.wd-15, .wd-10 { float: left;}
+				@include breakpoint(tablet2) {
+					display: block;
+				}
+			}
 
 			p {
 				padding: 0 10px;
@@ -302,6 +321,95 @@
 	}
 }
 
+.biller-bg {
+
+	ul.wd-ul {
+
+
+		li {
+			background: #fff;
+			border: 1px solid #82d9ff;
+			border-radius: 4px;
+			margin-bottom: 5px;
+
+			@include breakpoint(tablet2) {
+				margin-bottom: 10px;
+			}
+
+			.wd-20 p {
+
+				font-weight: 300;
+			}
+
+			p {
+
+				&.null-left {
+					padding-left: 0;
+
+					@include breakpoint(tablet2) {
+						padding-left: 120px;
+						position: relative;
+
+					}
+				}
+
+				@include breakpoint(tablet2) {
+					padding-left: 120px;
+					position: relative;
+
+				}
+			}
+
+			&:hover {
+				background: #fff;
+			}
+
+			.biller-label {
+				min-width: 100px;
+				font-weight: 300;
+				position: absolute;
+				top: 0;
+				left: 10px;
+				display: none;
+
+				@include breakpoint(tablet2) {
+					display: block;
+				}
+
+			}
+		}
+	}
+}
+
+.biller-list-img {
+	padding-bottom: 33%;
+	max-width: 120px;
+	width: 100%;
+    height: auto;
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 10px ;
+
+    @include breakpoint(tablet2) {
+    	padding-bottom: 18%;
+    	margin-bottom: 10px;
+    }
+
+    img {
+    	padding: 0px 10px;
+	    position: absolute;
+	    max-width: 100%;
+	    max-height: 100%;
+	    display: block;
+	    top: 0;
+	    right: 0;
+	    bottom: 0;
+	    left: 0;
+	    margin: auto;
+    }
+}
+
 .filter-hd {
 	display: flex;
 	margin: 10px 0 20px;
@@ -310,7 +418,7 @@
 		display: none;
 	}
 
-	.title, .discount, .contact, .wd-20, .wd-15, .wd-10 {
+	.title, .discount, .contact, .wd-30, .wd-20, .wd-15, .wd-10 {
 		background-color: $coBlue;
 		color: $coWhite;
 		padding: 10px ;
