--- a/css/new-style.css
+++ b/css/new-style.css
@@ -182,6 +182,78 @@
   .filter-hd .discount, .filter-hd .contact {
     width: 18%; }
 
+
+
+.sec-menu ul li {
+  position: relative;
+}
+
+.sec-menu ul li.has-sub {
+}
+
+.sec-menu ul li.has-sub > a:after {
+
+  content: "\f078";
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 10px;
+  position: absolute;
+  top: 5px;
+  right: 0px;
+  color: #00adef;
+  z-index: 101;
+  -webkit-transition: top 0.4s ease;
+  -moz-transition: top 0.4s ease;
+  -ms-transition: top 0.4s ease;
+  -o-transition: top 0.4s ease;
+  transition: top 0.4s ease;
+}
+
+.has-sub-item {
+  padding-top: 21px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  min-width: 230px;
+  display: none;
+}
+
+.has-sub-item.displayed {
+  display: block;
+}
+
+.sec-menu-fix.is-fixed .has-sub-item {
+  padding-top: 19px;
+}
+
+.sec-menu ul li.has-sub > a {
+  color: #6d6e71;
+  padding-right: 20px;
+}
+
+.sec-menu ul li.has-sub > a:before {
+  display: none;
+}
+
+.sec-menu ul ul {
+  
+  padding-left: 0;
+  background: #fff;
+  padding-bottom: 10px;
+  border: 1px solid #e6e6e6;
+  border-top: none;
+}
+
+.sec-menu ul ul li {
+  display: block;
+  margin-bottom: 8px;
+
+}
+
 @media (max-width: 992px) {
 
 	.promo-listings-omc p { 
